# Agentic-AI

open-ai-agent-sdk/1.hello-agent/: 1.sync_hello_agent.py  2.async_hello_agent.py  README.md  pyproject.toml
open-ai-agent-sdk/2.tool-calling/: 1.single_tool_calling_agent.py  2.multi_tool_calling_agent.py  3.agent_as_a_tool.py  README.md  pyproject.toml
open-ai-agent-sdk/3.hand-off/: 1.daraz_customer_support_agent.py  README.md  main.py  pyproject.toml
open-ai-agent-sdk/3.hands-off/: README.md  pyproject.toml
open-ai-agent-sdk/4.guard-rails/: 1.science_homework_agent.py  README.md  main.py  pyproject.toml
open-ai-agent-sdk/5.streaming/: main.py  pyproject.toml
open-ai-agent-sdk/async-agent/: main.py  pyproject.toml
open-ai-agent-sdk/hello-agent/: README.md  main.py  pyproject.toml
open-ai-agent-sdk/project-1/: main.py  pyproject.toml
open-ai-agent-sdk/rafay-agent/: README.md  main.py  pyproject.toml
weather-agent/: .env  README.md  main.py  pyproject.toml
