[project]
name = "2-tool-calling"
version = "0.1.0"
description = "Simple Agents That call tools to respond to user query"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.1.0",
    "python-dotenv>=1.1.1",
]

authors = [
    { name = "Abdul Rafay", email = "rafaynadeem77@gmail.com" }
]
