[project]
name = "hand-off learning agents"
version = "0.1.0"
description = "Simple Daraz Customer Support Agent with Hand Off"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.95.1",
    "openai-agents>=0.1.0",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
]

authors = [
    { name = "Abdul Rafay", email = "rafaynadeem77@gmail.com" }
]
